--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,22 @@ body {
     font-weight: 300;
     color: #3a3a3a;
 }
+
+ul > li {
+    font-family: 'Poppins', sans-serif;
+    color: crimson;
+}
+
+#menu{
+    font-size: 110%; 
+    letter-spacing: 4px;
+
+}
+
+#menu li{
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+    
+
+}
