hero-image photo uploaded

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,10 @@ ul > li {
     
 
 }
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/girlincinemaaffinity.jpg') no-repeat center center;
+
+}
