--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Poppins:wght@300&display=swap');
 
+* {
+    margin: 0;
+    border: none;
+    padding: 0;
+
+}
 
 #logo {
     float: left;
     font-size: 400%;
     margin-left: 30px;
     color: crimson;
+    line-height: 75px;
+
 
 }
 
@@ -21,9 +29,10 @@ ul > li {
 }
 
 #menu{
-    font-size: 110%; 
+    font-size: 130%; 
     letter-spacing: 4px;
     color: white;
+    line-height: 75px;
 
 }
 
@@ -44,12 +53,70 @@ ul > li {
 }
 
 #trailers{
-    background-image: url(../images/Trailerimage300px.jpg); 
     float:left;
-    width: 33%;
+    width: 35%;
+    height: 300px;
     padding: 0;
-    font-family: poppins;
+    font-family: 'Luckiest Guy', cursive;
 
+
+}
+
+p{
+    font-family: poppins;
+}
+
+#box-office {
+    float: left;
+    width: 35%;
+    height: 300px;
+    padding: 0;
+    font-family: 'Luckiest Guy', cursive;
+
+
+}
+
+#menu a{
+    text-decoration: none;
+    color: inherit;
+}
+
+#trailers a{
+    text-decoration: none;
+    color: inherit;
+
+}
+
+#reviews {
+
+    float: right;
+
+}
+
+#reviews a{
+    text-decoration: none;
+    color: inherit;
+}
+
+#box-office a {
+    text-decoration: none;
+    color: inherit;
+
+}
+
+#box-office {
+    float: left;
+
+}
+
+#podcast a {
+    text-decoration: none;
+    color: inherit;
+
+}
+
+#podcast {
+    float:right;
 
 }
 
