--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,72 +60,40 @@ ul > li {
     position: relative;
 }
 
-#trailers{
-    float:left;
-    width: 35%;
-    height: 300px;
-    padding: 0;
-    font-family: 'Luckiest Guy', cursive;
-    
-
-
-}
 
 p{
     font-family: poppins;
 }
 
-#box-office {
-    float: left;
-    width: 35%;
-    height: 300px;
-    padding: 0;
-    font-family: 'Luckiest Guy', cursive;
-
-
+h2 {
+    font-family: 'Luckiest Guy', cursive; san-serif;
 }
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+}
+
 
 #menu a{
     text-decoration: none;
     color: black;
 }
 
-#trailers a{
-    text-decoration: none;
-    color: inherit;
-
-}
-
-#reviews {
-
-    float: right;
-
-}
-
-#reviews a{
-    text-decoration: none;
-    color: inherit;
-}
-
-#box-office a {
-    text-decoration: none;
-    color: inherit;
-
-}
-
-#box-office {
+#trailer {
+    font-family: 'Luckiest Guy', cursive; san-serif;
+    color: black;
+    width: 33%;
+    height: 600px;
     float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
 
 }
 
-#podcast a {
-    text-decoration: none;
-    color: inherit;
-
-}
-
-#podcast {
-    float:right;
-
+#trailer a{
+    font-family: 'Luckiest Guy', cursive; san-serif;
+    color: black;
 }
 
