--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,24 @@ h3 {
 
 #trailer a{
     font-family: 'Luckiest Guy', cursive; san-serif;
+    color: crimson;
+}
+
+#box-office a{
+    font-family: 'Luckiest Guy', cursive; san-serif;
+    color: crimson;
+}
+
+#box-office {
+    font-family: 'Luckiest Guy', cursive; san-serif;
     color: black;
+    width: 33%;
+    height: 600px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
 }
 
