--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,20 @@ h3 {
 
 }
 
+.money{
+    width: 300px;
+}
+
+.trailer-img{
+    width: 300px;
+}
+
+.podcast-img{
+    width: 300px;
+    height: 200px
+    
+}
+
 #trailer a{
     font-family: 'Luckiest Guy', cursive; san-serif;
     color: crimson;
@@ -106,6 +120,18 @@ h3 {
     font-family: 'Luckiest Guy', cursive; san-serif;
     color: black;
     width: 33%;
+    height: 300px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
+}
+#podcast {
+    font-family: 'Luckiest Guy', cursive; san-serif;
+    color: black;
+    width: 33%;
     height: 600px;
     float: left;
     padding: 30px 0 0 10px;
@@ -113,5 +139,10 @@ h3 {
     border: 2px solid white;
     box-sizing: border-box;
 
+}
+
+#podcast a{
+    font-family: 'Luckiest Guy', cursive; san-serif;
+    color: crimson;
 }
 
