--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,8 @@ ul > li {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url('../images/girlincinemaaffinity.jpg') no-repeat center center;
+    background: url('../images/girlincinemaaffinity.jpg') no-repeat;
+    background-position: center;
     overflow: hidden;
     position: relative;
 }
@@ -83,7 +84,7 @@ h3 {
     font-family: 'Luckiest Guy', cursive; san-serif;
     color: black;
     width: 33%;
-    height: 600px;
+    height: 300px;
     float: left;
     padding: 30px 0 0 10px;
     text-align: center;
