--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ p{
 }
 
 h2 {
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
 }
 
 h3 {
@@ -81,7 +81,7 @@ h3 {
 }
 
 #trailer {
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: black;
     width: 33%;
     height: 300px;
@@ -108,17 +108,17 @@ h3 {
 }
 
 #trailer a{
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: crimson;
 }
 
 #box-office a{
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: crimson;
 }
 
 #box-office {
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: black;
     width: 33%;
     height: 300px;
@@ -130,7 +130,7 @@ h3 {
 
 }
 #podcast {
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: black;
     width: 33%;
     height: 600px;
@@ -143,7 +143,7 @@ h3 {
 }
 
 #podcast a{
-    font-family: 'Luckiest Guy', cursive; san-serif;
+    font-family: 'Luckiest Guy', cursive, san-serif;
     color: crimson;
 }
 
