--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,13 +212,13 @@ display: inline;
     border-radius: 2px;
 }
 
-.review-section {
+.topgun-section {
 
     font-family: 'Luckiest Guy', cursive, san-serif;
     color: black;
     width: 33%;
     height: 180px;
-    padding: 30px 0 0 10px;
+    padding: 0;
     text-align: center;
     border: 2px solid white;
     box-sizing: border-box;
@@ -226,6 +226,90 @@ display: inline;
 }
 
 
+.topgun-section img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.darling-section {
+
+    font-family: 'Luckiest Guy', cursive, san-serif;
+    color: black;
+    width: 33%;
+    height: 180px;
+    padding: 0;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
+}
+
+
+.darling-section img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.paradise-section {
+
+    font-family: 'Luckiest Guy', cursive, san-serif;
+    color: black;
+    width: 33%;
+    height: 180px;
+    padding: 0;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
+}
+
+
+.paradise-section img{
+    width: 100%;
+    height: 100%;
+    
+}
+
+.run-section {
+
+    font-family: 'Luckiest Guy', cursive, san-serif;
+    color: black;
+    width: 33%;
+    height: 180px;
+    padding: 0;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
+}
+
+
+.run-section img{
+    width: 100%;
+    height: 100%;  
+}
+
+.beast-section {
+
+    font-family: 'Luckiest Guy', cursive, san-serif;
+    color: black;
+    width: 33%;
+    height: 180px;
+    padding: 0;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+
+}
+
+
+.beast-section img{
+    width: 100%;
+    height: 100%;
+    
+}
 
 
 
