form file path test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ display: inline;
 
 .form-section {
     clear: left;
-    background: url("./assets/images/getintouch.jpeg");
+    background: url("/assets/images/getintouch.jpeg");
     background-size: cover;
     background-position: center;
     height: 900px;
