--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@
 
 }
 
+
+
 body {
     font-family: 'Luckiest Guy', cursive;
     font-weight: 300;
@@ -72,6 +74,7 @@ p{
 
 h2 {
     font-family: 'Luckiest Guy', cursive, san-serif;
+    color: crimson;
 }
 
 h3 {
@@ -84,71 +87,14 @@ h3 {
     color: black;
 }
 
-#trailer {
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: black;
-    width: 33%;
-    height: 300px;
-    float: left;
-    padding: 30px 0 0 10px;
+.landing-page {
     text-align: center;
-    border: 2px solid white;
-    box-sizing: border-box;
-
+    margin-top: 30px 0 0 0;
+    padding: 30px 0 ;
 }
 
-.money{
-    width: 300px;
-}
-
-.trailer-img{
-    width: 300px;
-}
-
-.podcast-img{
-    width: 300px;
-    height: 200px
-    
-}
-
-#trailer a{
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: crimson;
-}
-
-#box-office a{
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: crimson;
-}
-
-#box-office {
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: black;
-    width: 33%;
-    height: 300px;
-    float: left;
-    padding: 30px 0 0 10px;
-    text-align: center;
-    border: 2px solid white;
-    box-sizing: border-box;
-
-}
-#podcast {
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: black;
-    width: 33%;
-    height: 600px;
-    float: left;
-    padding: 30px 0 0 10px;
-    text-align: center;
-    border: 2px solid white;
-    box-sizing: border-box;
-
-}
-
-#podcast a{
-    font-family: 'Luckiest Guy', cursive, san-serif;
-    color: crimson;
+.landing-page h2 {
+    font-size: 200%;
 }
 
 footer {
@@ -321,8 +267,18 @@ display: inline;
         height: 1200px;
         margin: 0 auto;
     }
-    
-}
+    }
+
+@media screen and (max-width: 950px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin-left: 20px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+
+} 
 
 
 
