--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
     height: 200px;
 }
 
+
 #logo {
     float: left;
     font-size: 400%;
@@ -89,7 +90,7 @@ h3 {
 
 .landing-page {
     text-align: center;
-    margin-top: 30px 0 0 0;
+    margin-top: 30px 0 30px 0;
     padding: 30px 0 ;
 }
 
@@ -97,13 +98,25 @@ h3 {
     font-size: 200%;
 }
 
+.landing-page a {
+    text-decoration: none;
+    color: black;
+}
+
+.clapper {
+    margin: auto;
+    padding: 0 0 30px;
+}
+
 footer {
-    height: 150px;
+    height: 100px;
+    margin: auto;
 
 }
 
 .social-networks {
     text-align: center;
+    padding: 30px 0 0;
 
 }
 
