--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,11 +98,6 @@ h3 {
     font-size: 200%;
 }
 
-.landing-page a {
-    text-decoration: none;
-    color: black;
-}
-
 .clapper {
     margin: auto;
     padding: 0 0 30px;
@@ -290,6 +285,26 @@ display: inline;
         margin-bottom: 20px;
         line-height: 25px;
     }
+
+    #logo {
+        left: 0;
+    }
+
+    #home-page{
+        width: 90%;
+        height: 1200px;
+    }
+
+    .moviesabout {
+        clear: left;
+        float: left;
+        margin-left: 20px;
+        margin-bottom: 20px;
+        line-height: 25px;
+    
+    }
+
+
 
 } 
 
