--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h3 {
 
 .landing-page {
     text-align: center;
-    margin-top: 30px 0 30px 0;
+    margin-top: 30px 0 30 0;
     padding: 30px 0 ;
 }
 
@@ -293,15 +293,6 @@ display: inline;
     #home-page{
         width: 90%;
         height: 1200px;
-    }
-
-    .moviesabout {
-        clear: left;
-        float: left;
-        margin-left: 20px;
-        margin-bottom: 20px;
-        line-height: 25px;
-    
     }
 
 
