--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h3 {
 
 .landing-page {
     text-align: center;
-    margin-top: 30px 0 30 0;
+    margin-top: 30px 0;
     padding: 30px 0 ;
 }
 
